Fixes #8, adds spacing around text

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+body {
+    height: 100vh;
+    width: 100vw;
+}
+.text-container {
+    box-sizing: border-box;
+    padding: 0px 35px;
+}
 img {
     display: block;
     width: 100%;
